Fixed carousel being too wide on wider screens

--- a/style/main.less
+++ b/style/main.less
@@ -50,6 +50,6 @@ footer {
         }
     }
     #carousel {
-        width: 70%;
+        width: 60%;
     }
 }
